force-app/main/default/objects/Adopter_Profile__c/Adopter_Profile__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter] Stores details of a potential adopter so that they can be matched against available Animals.</description>
    <label>Adopter Profile</label>
    <nameField>
        <displayFormat>ADPROFILE{000000}</displayFormat>
        <label>Adopter Profile Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adopter Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>