force-app/main/default/objects/Adopter_Profile__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Animal Shelter] Indicates this is the active record</description>
    <inlineHelpText>Indicates this is the active profile for this contact</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>