force-app/main/default/objects/Adopter_Profile__c/fields/Current_Daytime_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Current_Daytime_Arrangements__c</fullName>
    <inlineHelpText>What are your daytime arrangements, i.e. Work from Home, Work away, etc</inlineHelpText>
    <label>Current Daytime Arrangements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>