force-app/main/default/objects/Adopter_Profile__c/fields/Local_Vet__c.field-meta.xml
<CustomField>
    <fullName>Local_Vet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there access to a local vet?</inlineHelpText>
    <label>Local Vet?</label>
    <type>Checkbox</type>
</CustomField>