force-app/main/default/objects/Adopter_Profile__c/fields/Local_Vet_details__c.field-meta.xml
<CustomField>
    <fullName>Local_Vet_details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If possible select the name of the local vet</inlineHelpText>
    <label>Local Vet details</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adopter Profiles</relationshipLabel>
    <relationshipName>Adopter_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>