force-app/main/default/objects/Adopter_Profile__c/fields/Location_of_Animal_Daytime__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Animal_Daytime__c</fullName>
    <inlineHelpText>What is the location of the animal during the day</inlineHelpText>
    <label>Location of Animal - Daytime</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>