force-app/main/default/objects/Adopter_Profile__c/fields/Location_of_Animal_Night__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Animal_Night__c</fullName>
    <inlineHelpText>Where will the animal be at night, i.e. kennel, cage, free roaming, etc</inlineHelpText>
    <label>Location of Animal - Night</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>