force-app/main/default/objects/Adopter_Profile__c/fields/Other_Animal_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Animal_Details__c</fullName>
    <inlineHelpText>What other animals are in the household?</inlineHelpText>
    <label>Other Animal Details</label>
    <type>TextArea</type>
</CustomField>