force-app/main/default/objects/Adopter_Profile__c/fields/Other_Animals__c.field-meta.xml
<CustomField>
    <fullName>Other_Animals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there other animals in the household</inlineHelpText>
    <label>Other Animals?</label>
    <type>Checkbox</type>
</CustomField>