force-app/main/default/objects/Adopter_Profile__c/fields/Other_Animals_of_same_Species__c.field-meta.xml
<CustomField>
    <fullName>Other_Animals_of_same_Species__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are the other animals of the same species as the one you want to adopt?</inlineHelpText>
    <label>Other Animals of same Species</label>
    <type>Checkbox</type>
</CustomField>