force-app/main/default/objects/Adopter_Profile__c/fields/Other_Pets_Animals__c.field-meta.xml
<CustomField>
    <fullName>Other_Pets_Animals__c</fullName>
    <inlineHelpText>Add details of any other pets that you have</inlineHelpText>
    <label>Other Pets/Animals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>