force-app/main/default/objects/Adopter_Profile__c/fields/Permission_to_House_Animal__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_House_Animal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the accommodation is not owned by the adopter, do you/they have permission to house an animal, i.e. from Landlord, etc</inlineHelpText>
    <label>Permission to House Animal?</label>
    <type>Checkbox</type>
</CustomField>