force-app/main/default/objects/Adopter_Profile__c/fields/Preferred_Animal_Size__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Animal_Size__c</fullName>
    <inlineHelpText>What is the preferred size of animal the adopter would like to adopt</inlineHelpText>
    <label>Preferred Animal Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Animal_Size</valueSetName>
    </valueSet>
</CustomField>