force-app/main/default/objects/Adopter_Profile__c/fields/Preferred_Maturity_Level__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Maturity_Level__c</fullName>
    <label>Preferred Maturity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No preference</fullName>
            </value>
            <value>
                <fullName>Baby - (puppy, kitten, etc)</fullName>
            </value>
            <value>
                <fullName>Teenage</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>