force-app/main/default/objects/Adopter_Profile__c/fields/Profile_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Approval_Status__c</fullName>
    <label>Profile Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>More info needed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>