force-app/main/default/objects/Adopter_Profile__c/fields/Profile_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Profile_End_Date__c</fullName>
    <inlineHelpText>The date this profile expired</inlineHelpText>
    <label>Profile End Date</label>
    <type>Date</type>
</CustomField>