force-app/main/default/objects/Adopter_Profile__c/fields/Profile_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Profile_Rejected_Reason__c</fullName>
    <inlineHelpText>The reason while this profile has been rejected</inlineHelpText>
    <label>Profile Rejected Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>