force-app/main/default/objects/Adopter_Profile__c/fields/Profile_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Profile_Start_Date__c</fullName>
    <inlineHelpText>The date this profile is valid from</inlineHelpText>
    <label>Profile Start Date</label>
    <type>Date</type>
</CustomField>