force-app/main/default/objects/Adopter_Profile__c/fields/Reason_for_wanting_to_Adopt__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_wanting_to_Adopt__c</fullName>
    <label>Reason for wanting to Adopt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>