force-app/main/default/objects/Adopter_Profile__c/fields/Safe_Outside_Area__c.field-meta.xml
<CustomField>
    <fullName>Safe_Outside_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the accommodation have a safe/secure outside area</inlineHelpText>
    <label>Safe Outside Area</label>
    <type>Checkbox</type>
</CustomField>