force-app/main/default/objects/Adopter_Profile__c/fields/Small_Children__c.field-meta.xml
<CustomField>
    <fullName>Small_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that there are small children in the household</inlineHelpText>
    <label>Small Children?</label>
    <type>Checkbox</type>
</CustomField>