force-app/main/default/objects/Adopter_Profile__c/fields/Special_Care_Adoption_Considered__c.field-meta.xml
<CustomField>
    <fullName>Special_Care_Adoption_Considered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Would the adopter be willing to take on an animal that requires special care, i.e. Medical, Behavioural issues</inlineHelpText>
    <label>Special Care Adoption Considered?</label>
    <type>Checkbox</type>
</CustomField>