force-app/main/default/objects/Adopter_Profile__c/fields/Type_of_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Accommodation__c</fullName>
    <description>[Animal Shelter] The type of accommodation the Contact resided at</description>
    <label>Type of Accommodation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Accommodation</valueSetName>
    </valueSet>
</CustomField>