force-app/main/default/objects/Adopter_Profile__c/fields/Type_of_Animal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Animal__c</fullName>
    <inlineHelpText>The type of animal the contact would like to adopt</inlineHelpText>
    <label>Type of Animal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Animal</valueSetName>
    </valueSet>
</CustomField>