force-app/main/default/objects/Adopter_Profile__c/validationRules/Profile_End_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Profile_End_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Profile_End_Date__c &lt; Profile_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Profile_End_Date__c</errorDisplayField>
    <errorMessage>The Profile End Date cannot be earlier than the Profile Start Date</errorMessage>
</ValidationRule>