force-app/main/default/objects/Adopter_Profile__c/listViews/Active_Adopter_Profiles.listView-meta.xml
<ListView>
    <fullName>Active_Adopter_Profiles</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Type_of_Animal__c</columns>
    <columns>Profile_Start_Date__c</columns>
    <columns>Profile_Approval_Status__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Adopter Profiles</label>
</ListView>